Correccion de enlaces

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 			<h2 class="logotipo">SIR</h2>
 			<nav>
 				<!--Menu-->
-				<a href="index.html" class="activo">Inicio</a>
-				<a href="quienessomos.html#">Quienes Somos</a>
-				<a href="mision.html#">Mision</a>
+				<a href="index.html#" class="activo">Inicio</a>
+				<a href="quienessomos.html">Quienes Somos</a>
+				<a href="mision.html">Mision</a>
 				<a href="vision.html">Vision</a>
 			</nav>
 		</div>
