--- a/quienessomos.html
+++ b/quienessomos.html
@@ -22,8 +22,8 @@
 			<nav>
 				<!--Menu-->
 				<a href="index.html">Inicio</a>
-				<a href="quienessomos.html #" class="activo">Quienes Somos</a>
-				<a href="mision.html #">Mision</a>
+				<a href="quienessomos.html#" class="activo">Quienes Somos</a>
+				<a href="mision.html">Mision</a>
 				<a href="vision.html">Vision</a>
 			</nav>
 		</div>
