--- a/mision.html
+++ b/mision.html
@@ -22,8 +22,8 @@
 			<nav>
 				<!--Menu-->
 				<a href="index.html">Inicio</a>
-				<a href="quienessomos.html #">Quienes Somos</a>
-				<a href="mision.html #" class="activo">Mision</a>
+				<a href="quienessomos.html">Quienes Somos</a>
+				<a href="mision.html#" class="activo">Mision</a>
 				<a href="vision.html">Vision</a>
 			</nav>
 		</div>
