--- a/vision.html
+++ b/vision.html
@@ -22,9 +22,9 @@
 			<nav>
 				<!--Menu-->
 				<a href="index.html">Inicio</a>
-				<a href="quienessomos.html#">Quienes Somos</a>
-				<a href="mision.html#">Mision</a>
-				<a href="vision.html" class="activo">Vision</a>
+				<a href="quienessomos.html">Quienes Somos</a>
+				<a href="mision.html">Mision</a>
+				<a href="vision.html#" class="activo">Vision</a>
 			</nav>
 		</div>
 	</header>
